# floopy

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml
.cargo/: audit.toml
.github/workflows/: ci.yml
prisma/: schema.prisma
prisma/migrations/20230312084649_init/: migration.sql
src/: .env  config.ts  constants.rs  error.rs  error.ts  main.rs  main.ts  metadata.rs  shared.rs  structs.rs
src/commands/: help.rs  mem_usage.rs  mod.rs  ping.rs  system.rs
src/commands/Developer/: eval.ts
src/commands/General/: ping.ts
src/commands/Music/: play.ts
src/commands/bot/: help.rs  mod.rs  ping.rs  servers.rs  system.rs
src/commands/player/: leave.rs  mod.rs  play.rs  queue.rs  remove.rs  repeat.rs  seek.rs  shuffle.rs  skip.rs  volume.rs
src/events/: mod.rs  ready.rs  songbird.rs
src/lib/: Floopy.ts  setup.ts
src/lib/structures/: Player.ts
src/lib/types/: Arguments.d.ts
src/listeners/client/: ready.ts
src/listeners/music/: rawVoiceServerUpdate.ts  rawVoiceStateUpdate.ts
src/listeners/music/lavaclient/: connect.ts
