[package]
name = "floopy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "floopy"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.5.2"
text-colorizer = "1.0.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
songbird = { version = "0.3.1", features = [
    "yt-dlp",
    "builtin-queue",
    "serenity-rustls",
] }
url = "2.3.1"
thiserror = "1.0.40"
serenity = { version = "0.11.5", features = [
    "model",
    "voice",
], default-features = false }
humantime = "2.1.0"
sysinfo = { version = "0.29.2", default-features = false }
