[package]
name = "floopy"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.0"
thiserror = "1.0.40"
humantime = "2.1.0"
anyhow = "1.0.71"
reqwest = "0.11.18"
log = "0.4.19"

[dependencies.tokio]
version = "1.28.2"
features = ["rt-multi-thread", "signal", "parking_lot"]

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
features = ["cache"]
branch = "serenity-next"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
features = ["builtin-queue"]
branch = "next"

[dependencies.symphonia]
features = ["aac", "mp3", "isomp4", "alac"]
version = "0.5.3"

[dependencies.serenity_feature_only]
git = "https://github.com/serenity-rs/serenity"
features = ["unstable_discord_api", "voice"]
default-features = false
package = "serenity"
branch = "next"

[dependencies.sysinfo]
version = "0.29.2"
default-features = false

[dependencies.dashmap]
version = "5"
default-features = false

[patch.crates-io]
serenity = { git = "https://github.com/GnomedDev/serenity", branch = "test-seconds-patch" }

[patch."https://github.com/serenity-rs/serenity"]
serenity = { git = "https://github.com/GnomedDev/serenity", branch = "test-seconds-patch" }
